--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "training",
   "version": "1.0.0",
   "scripts": {
-    "build:dev": "cross-env NODE_ENV=development webpack --config webpack.config.js",
+    "build:dev": "cross-env NODE_ENV=development webpack --config webpack.config.js && node dist/server.js",
     "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "start": "cross-env NODE_ENV=development webpack-dev-server"
   },
@@ -18,6 +18,9 @@
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
